// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard MovieCard renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class="singlecard"
          href="/movies/undefined"
        >
          <img
            alt=""
          />
          <h4
            class="bold-font movie-name"
          />
          <hr
            class="dash"
          />
          <div
            class="movie-rating-price"
          >
            <span
              class="bold-font gray-font"
            >
              <i
                class="fa-sharp fa-solid fa-star-half-stroke"
              />
               
              5
            </span>
            <span
              class="movie-circle-splitter"
            />
            <span
              class="bold-font gray-font"
            >
              <i
                class="fa-solid fa-dollar-sign"
              />
               
            </span>
          </div>
          <p
            class="gray-font movie-details"
          />
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class="singlecard"
        href="/movies/undefined"
      >
        <img
          alt=""
        />
        <h4
          class="bold-font movie-name"
        />
        <hr
          class="dash"
        />
        <div
          class="movie-rating-price"
        >
          <span
            class="bold-font gray-font"
          >
            <i
              class="fa-sharp fa-solid fa-star-half-stroke"
            />
             
            5
          </span>
          <span
            class="movie-circle-splitter"
          />
          <span
            class="bold-font gray-font"
          >
            <i
              class="fa-solid fa-dollar-sign"
            />
             
          </span>
        </div>
        <p
          class="gray-font movie-details"
        />
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ServiceCard ServiceCard renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <a
          class="singlecard"
          href="/services/undefined"
        >
          <img
            alt=""
          />
          <h4
            class="bold-font service-name"
          />
          <hr
            class="dash"
          />
          <div
            class="service-rating-price"
          >
            <span
              class="bold-font gray-font"
            >
              <i
                class="fa-sharp fa-solid fa-star-half-stroke"
              />
               
              5
            </span>
            <span
              class="service-circle-splitter"
            />
            <span
              class="bold-font gray-font"
            >
              <i
                class="fa-solid fa-dollar-sign"
              />
               
            </span>
          </div>
          <p
            class="gray-font service-details"
          />
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <a
        class="singlecard"
        href="/services/undefined"
      >
        <img
          alt=""
        />
        <h4
          class="bold-font service-name"
        />
        <hr
          class="dash"
        />
        <div
          class="service-rating-price"
        >
          <span
            class="bold-font gray-font"
          >
            <i
              class="fa-sharp fa-solid fa-star-half-stroke"
            />
             
            5
          </span>
          <span
            class="service-circle-splitter"
          />
          <span
            class="bold-font gray-font"
          >
            <i
              class="fa-solid fa-dollar-sign"
            />
             
          </span>
        </div>
        <p
          class="gray-font service-details"
        />
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
